--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "^10.4.8",
     "c8": "^7.12.0",
     "jsdom": "^20.0.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vitest": "^0.19.1"
