--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "daisyui": "^2.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
+    "react-router": "^6.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.4",
     "@testing-library/react": "^13.3.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
