--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "boxicons": "^2.1.2",
     "daisyui": "^2.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-select": "^5.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.4",
     "@testing-library/react": "^13.3.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
