--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "boxicons": "^2.1.2",
     "daisyui": "^2.24.0",
     "react": "^18.2.0",
+    "react-daisyui": "^2.3.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-select": "^5.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
